# ink

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
MandelbrotFractal/Source/: CMakeLists.txt  Fractal.cpp  Fractal.h  Gui.cpp  Gui.h  Renderer.cpp  Renderer.h  Shaders.h  Texture.cpp  Texture.h  Window.h  hello_gl.cpp  main.cpp  targa.cpp  targa.h
Source/: CMakeLists.txt  Fractal.cpp  Fractal.h  Gui.cpp  Gui.h  Makefile  MouseInput.h  Renderer.cpp  Renderer.h  Shaders.h  Texture.cpp  Texture.h  Window.h  application.cpp  application.h  button.cpp  button.h  callback.h  fractal.cpp  fractal.h  image.cpp  image.h  input.cpp  input.h  label.cpp  label.h  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h  shaders.h  sprite.cpp  sprite.h  targa.cpp  targa.h  textbox.cpp  textbox.h  window.cpp  window.h
example/: CMakeLists.txt  bounce.cpp  bounce.h  demo.cpp  demo.h  em_main.cpp  main.cpp  merge.cpp  mesh.cpp
example/canvas/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h
example/mesh/: CMakeLists.txt  mesh.cpp  mesh.h
include/: fractal.h  ink.h
src/: CMakeLists.txt  application.cpp  application.h  asset_manager.h  audio.cpp  audio.h  button.cpp  button.h  camera.h  image.cpp  image.h  image_view.cpp  image_view.h  input.cpp  input.h  label.cpp  label.h  log.h  mesh.h  mesh_renderer.cpp  mesh_renderer.h  model.h  node_2d.h  node_3d.h  object.cpp  object.h  renderer.cpp  renderer.h  shader.h  shaders.h  sprite.cpp  sprite.h  textbox.cpp  textbox.h  texture.h  transform.h  vec2.h  vertex.h  window.cpp  window.h
src/objimp/: bin  main.cpp  obj.cpp  obj.h  skele.md
src/physics/: CMakeLists.txt  build.sh  collider.cpp  collider.h  main.cpp  physics.h  physics_manager.h  phyx  rigid_body.h
